--- a/templates/master.html
+++ b/templates/master.html
@@ -31,6 +31,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">CONTACT US</a>
+                </li>   </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'shop' %}">SHOP</a>
                 </li>
 
                 {% if user.is_authenticated %}
